# PersonaAI

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODING_STANDARDS.md  DECISIONS.md  LICENSE  Makefile  PROJECT.md  README.md  docker-compose.yml  move_architecture_files.py  pyproject.toml
.github/workflows/: backend-ci.yml
AI/: CODING_STANDARDS.md  Instuction.md  architecture.md  decisions.md  project.md
backend/: .tmp_health_debug.py  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  factory.py
chrome_extension_files/: README.md
chrome_extension_files/personaai-extension/: README.md  background.js  content.css  content.js  manifest.json  options.html  options.js  sidepanel.css  sidepanel.html  sidepanel.js
docker/: README.md
docs/: AI_ENGINE.md  API.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE_REFACTOR_PROPOSAL.md  CHROME_EXTENSION_API_CONTRACT.md  CONNECTORS.md  DATABASE.md  DEVELOPMENT.md  GMAIL_FLOW_ONLY.md  GMAIL_OAUTH_MIGRATION_REPORT.md  OAUTH_FLOW.md  OAUTH_REFACTOR_MIGRATION_REPORT.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tasks/: lessons.md  roadmap.md
tests/: README.md  test_ai_module.py  test_auth.py  test_brain_models.py  test_brain_orchestrator.py  test_brain_state.py  test_communication_engine.py  test_connectors.py  test_entity_engine.py  test_knowledge_engine.py  test_memory_engine.py  test_model_manager.py  test_planning_engine.py  test_summary_subsystem.py  test_task_engine.py
(+333 files in other folders)
