[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personaai"
version = "1.0.0a0"
description = "Production backend foundation for the PersonaAI SaaS platform."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "PersonaAI" }]
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "SQLAlchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0,<26.0",
  "httpx>=0.27,<1.0",
  "isort>=5.13,<6.0",
  "mypy>=1.10,<2.0",
  "pre-commit>=3.7,<5.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
packages = ["app"]
mypy_path = "backend"
